complete class define

--- a/04_类的定义.md
+++ b/04_类的定义.md
@@ -1,4 +1,189 @@
-在C语言中定义一个新的类型通常用struct关键字
+在C语言中定义一个新的类型通常用``struct``关键字，``struct``只是简单的将多个数据类型封装成一个新的数据类型。
+在面向对象编程时，数据类型需要更加灵活的机制，于是引入了类(``class``)的概念。
+假设我们需要将电脑抽象成一个数据类型，并提供一个函数来打印电脑的基本信息。
+用C语言通常用如下方式实现：
+
+```c
+#include <stdio.h>
+
+struct Computer{
+  char* host_name;
+  int cpu_num;
+};
+
+void print_info(const struct Computer* computer){
+  printf("Computer %s has %d cores.\n", computer->host_name, computer->cpu_num);
+}
+
+int main(){
+  struct Computer zbook;
+  zbook.host_name = "zbook";
+  zbook.cpu_num = 16;
+  print_info(&zbook);
+}
+```
+
+而在C++中通常是这样实现的：
+```c++
+#include <iostream>
+
+class Computer {
+public: //访问说明符，public：任意实体都可以访问
+  Computer(const char* _host_name, int _cpu_num); //构造函数
+  ~Computer(); //析构函数
+  void print_info();  //public成员函数
+
+private: //访问说明符，private: 只有类内部成员可以访问
+  const char* host_name_; //private成员变量
+  int cpu_num_; //private成员变量
+
+};
+
+Computer::Computer(const char* _host_name, int _cpu_num){
+  host_name_ = _host_name;
+  cpu_num_ = _cpu_num;
+}
+
+void Computer::print_info(){
+  std::cout << "Computer " << this->host_name_ << " has " << this->cpu_num_ << " cores." << std::endl;
+}
+
+int main(){
+  Computer zbook("zbook", 16);
+  zbook.print_info();
+}
+```
+
+C++与C的实现有如下区别：  
+1. 实例化时，提供构造函数来自定义初始化过程  
+2. 提供成员函数机制，在成员函数中可以直接访问同一实例中的数据成员  
+3. 提供访问权限控制机制，有更好的封装性，类的外部实体无法访问private修饰下的类成员  
+
+## 成员变量和成员函数
+### 成员变量
+C++中成员变量的使用与C语言类似  
+搭配**访问说明符**，可以控制成员的访问劝降，有更好的封装性。
+- ``public``修饰下的成员，所有实体都可以访问；
+- ``private``修饰的成员，只有对象内部可以访问；
+- ``protected``修饰的成员，可以被该对象的成员和派生类对象成员访问
+
+
+```c++
+class Computer {
+public: //访问说明符，public：任意实体都可以访问
+  Computer(const char* _host_name, int _cpu_num); //构造函数
+  ~Computer(); //析构函数
+  void print_info();  //public成员函数
+
+private: //访问说明符，private: 只有类内部成员可以访问
+  const char* host_name_; //private成员变量
+  int cpu_num_; //private成员变量
+};
+```
+像上面定义的``host_name_``和``cpu_num_``成员，在类的外部是无法访问的。比如下面的例子：
+```c++
+int main(){
+  Computer zbook("zbook", 16);
+  int cpu_num = zbook.cpu_num_;
+  std::cout << "core number is " << cpu_num;
+}
+```
+编译器会有如下报错：
+```c++
+cpp_demo.cpp: In function 'int main()':
+cpp_demo.cpp:25:23: error: 'int Computer::cpu_num_' is private within this context
+   int cpu_num = zbook.cpu_num_;
+                       ^~~~~~~~
+cpp_demo.cpp:10:7: note: declared private here
+   int cpu_num_;
+```
+
+### 成员函数
+在C语言中可以用``struct``中的函数指针成员，来模拟成员函数。就像这样:
+```c
+#include <stdio.h>
+
+struct Computer{
+  char* host_name;
+  int cpu_num;
+  void (*my_print_info)(const struct Computer* computer);
+};
+
+void print_info(const struct Computer* computer){
+  printf("Computer %s has %d cores.\n", computer->host_name, computer->cpu_num);
+}
+
+int main(){
+  struct Computer zbook;
+  zbook.host_name = "zbook";
+  zbook.cpu_num = 16;
+  zbook.my_print_info = print_info;
+  zbook.my_print_info(&zbook);
+}
+```
+
+这样使用就失去了C++中成员函数的封装性，只是当作一个数据成员在使用。  
+在C++中成员函数可以通过``this``指针来访问所属的类实例的成员。这个``this``指针并没有出现在成员函数的形参列表中，它是一个隐藏的形参，在实例化对象时会被赋值成指向该对象的指针。  
+其实除了这个``this``指针，成员函数在编译后是和普通函数一样的，只是编译器在编译时会自动添加一个形参。  
+``this``指针是成员函数与对象实例的唯一纽带。  
+
 # 构造函数
+构造函数是一种特殊的成员函数，它在对象实例化时被执行，可以提供自定义的初始化过程。  
+构造函数的名称与类的名称是完全相同的，并且不会返回任何类型。如果用户没有定义，编译器会自动生成**默认构造函数**，即不带任何参数的构造函数。  
+构造函数通常由以下几个用途：
+1. 初始化成员变量
+2. 管理资源，在构造函数中初始化资源，在析构函数中释放资源
+
+## 带初始化列表的构造函数
+
+```c++
+// 在构造函数内部对成员变量赋值
+Computer::Computer(const char* _host_name, int _cpu_num){
+  host_name_ = _host_name;
+  cpu_num_ = _cpu_num;
+}
+
+// 使用初始化列表对成员变量赋值
+Computer::Computer(const char* _host_name, int _cpu_num) : host_name_(_host_name), cpu_num_(_cpu_num) {
+
+}
+```
+上述两种构造函数是等效的，在一些场景下使用初始化列表会更优：
+1. 成员变量是类类型时，使用初始化列表可以少一次构造
+2. 成员变量时类类型，并且没有默认构造函数时，必须使用初始化列表
+3. const成员和引用类型成员，必须使用初始化列表进行初始化
+
+## 资源管理
+**RAII**（资源获取即初始化）机制，是C++中管理资源的管用方法。
+1. 将资源的管理放在一个类中，在实例化类对象时，利用构造函数申请并初始化资源
+2. 使用对象的成员对资源进行管理
+3. 在离开对象生命周期时，利用析构函数释放资源
+
+假设Computer类型需要使用一块512大小的内存，可以在构造函数中申请， 并在析构函数中释放：
+```c++
+class Computer {
+public:
+  Computer(const char* _host_name, int _cpu_num);
+  ~Computer();
+  void print_info();
+
+private:
+  const char* host_name_;
+  int cpu_num_;
+  uint8_t *data_;
+
+};
+
+Computer::Computer(const char* _host_name, int _cpu_num) : host_name_(_host_name), cpu_num_(_cpu_num) {
+  data_ = (uint8_t*)malloc(512);
+}
+
+Computer::~Computer(){
+  free(data_);
+}
+```
 
 # 析构函数
+析构函数也是一种特殊的成员函数，它在对象离开自己生命周期时，或者在使用``delete``显式销毁对象时被调用。  
+析构函数被用来在销毁对象时，自定义资源释放过程。如果用户没有定义析构函数，编译器会自动生成**默认析构函数**。  
+默认的构造函数只能完成简单的资源释放，如果对象有动态申请的资源，必须自定义析构函数对其进行释放，否则会造成资源泄露。  
