--- a/05_类与类的关系.md
+++ b/05_类与类的关系.md
@@ -1,7 +1,7 @@
 在尝试理解C++代码时，分析类与类之间的关系是非常重要的。类与类之间的关系有很多，比如依赖、关联、聚合、组合、继承、实现等等。本节主要介绍常用的三种关系：聚合、组合、继承。
 
 # 聚合
-聚合可以简单的理解为一个类含有另一个类的指针，这两个类对象的生命周期可能不同。用UML图表示如下：  
+聚合可以简单的理解为一个类含有另一个类的指针，即``has -a pointer``的概念。这两个类对象的生命周期可能不同。用UML图表示如下：  
 ![聚合](out/class_relationship/Aggregation.svg)
 
 像下面代码中的 ``class Mouse`` 和 ``class Zbook``
@@ -24,5 +24,45 @@ class Zbook{
 ```
 
 # 组合
+组合是``has-a``的概念，也就是一个类完全包含另一个类，组合一个类，你将具有那个类的全部功能。并且类的生命周期是一致的。
+![组合](out/class_relationship/Composition.svg)
 
+以下面的代码举例，``class Zbook``中有一个``class Mouse``的数据成员，当``class Zbook``构造时，会在其内部同时构造一个``class Mouse``，当``class Zbook``析构时，也会同时析构内部的``class Mouse``对象。
+```c++
+class Mouse{
+public:
+  void click(){
+    /* do some thing */
+  }
+};
+
+class Zbook{
+public:
+  Mouse m;
+  void play(){
+      m.click();
+  }
+};
+```
 # 继承
+继承关系是一种更加复杂的关系，是实现面向对象特性中的继承特性的重要机制。从底层内存中分析两个继承
+
+
+```c++
+class Computer{
+public:
+  Mouse m;
+  virtual void play(){
+    m.click();
+  }
+};
+
+class Zbook : public Computer{
+public:
+  KeyBoard k;
+  virtual void play(){
+      m.click();
+      k.hit();
+  }
+};
+```
