--- a/05_类与类的关系.md
+++ b/05_类与类的关系.md
@@ -45,9 +45,9 @@ public:
 };
 ```
 # 继承
-继承关系是一种更加复杂的关系，是实现面向对象特性中的继承特性的重要机制。从底层内存中分析两个继承
+继承关系是一种更加复杂的关系，是实现面向对象特性中的继承特性的重要机制。从底层内存中分析两个继承类的话，会发现他们的内存关系有点像组合的关系：派生类对象的内存中完整包含其基类对象内存。不同的是，派生类对象内存的头部会有一个虚指针，然后搭配虚函数和虚表可以实现运行时的多态特性。
 
-
+![继承](out/class_relationship/Derived.svg)
 ```c++
 class Computer{
 public:
@@ -66,3 +66,18 @@ public:
   }
 };
 ```
+
+# 类对象内存布局分析工具
+分析出类与类之间的关系，对于理解C++代码非常重要。在这里推荐一种类对象内存布局分析的方法。
+1. 如果你使用的是g++编译器，可以通过g++指令中的``-fdump-lang-class``选项来打印文件中的类对象的内存分布，以及虚表的内容。
+    ```bash
+    g++ -fdump-lang-class -c hello_world.cpp
+    ```
+2. 如果用的是clang编译器，可以通过``clang -cc1 -fdump-record-layouts``和 ``clang -cc1 -fdump-vtable-layouts``来打印内存分布和虚表内容。
+    ```bash
+    clang -cc1 -fdump-record-layouts hello_world.cpp
+    ```
+
+    ```bash
+    clang -cc1 -fdump-vtable-layouts hello_world.cpp
+    ```
