--- a/05_类与类的关系.md
+++ b/05_类与类的关系.md
@@ -45,7 +45,7 @@ public:
 };
 ```
 # 继承
-继承关系是一种更加复杂的关系，是实现面向对象特性中的继承特性的重要机制。从底层内存中分析两个继承类的话，会发现他们的内存关系有点像组合的关系：派生类对象的内存中完整包含其基类对象内存。不同的是，派生类对象内存的头部会有一个虚指针，然后搭配虚函数和虚表可以实现运行时的多态特性。
+继承关系是一种更加复杂的关系，是实现面向对象特性中的继承特性的重要机制。可以将继承理解为``is-a``的概念。从底层内存中分析两个继承类的话，会发现他们的内存关系有点像组合的关系：派生类对象的内存中完整包含其基类对象内存。不同的是，派生类对象内存的头部会有一个虚指针，然后搭配虚函数和虚表可以实现运行时的多态特性。
 
 ![继承](out/class_relationship/Derived.svg)
 ```c++
